--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "json-api-client": "~0.4.0",
+    "panoptes-client": "~0.1.1",
     "react": "0.13.3",
     "react-router": "0.13.3",
     "reflux": "~0.2.8"
