--- a/package.json
+++ b/package.json
@@ -26,10 +26,15 @@
     "webpack-stream": "~2.0.0"
   },
   "dependencies": {
+    "counterpart": "~0.16.8",
+    "debounce": "^1.0.0",
     "json-api-client": "~0.4.0",
     "panoptes-client": "~0.1.1",
     "react": "0.13.3",
+    "react-interpolate-component": "~0.7.1",
     "react-router": "0.13.3",
-    "reflux": "~0.2.8"
+    "react-translate-component": "~0.9.0",
+    "reflux": "~0.2.8",
+    "tether": "HubSpot/tether#df8cd44"
   }
 }
