--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "gulp-watch": "~4.2.4",
     "jsx-loader": "~0.13.2",
     "nib": "~1.1.0",
+    "node-libs-browser": "^0.5.2",
     "stylus": "~0.51.1",
-    "webpack-stream": "~2.0.0"
+    "webpack": "~1.10.1"
   },
   "dependencies": {
     "counterpart": "~0.16.8",
