--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack": "~1.10.1"
   },
   "dependencies": {
+    "classnames": "~2.1.3",
     "counterpart": "~0.16.8",
     "debounce": "^1.0.0",
     "json-api-client": "~0.4.0",
