--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "gulp": "~3.9.0",
     "gulp-changed": "~1.2.1",
     "gulp-imagemin": "~2.3.0",
+    "gulp-inject": "^1.5.0",
     "gulp-notify": "~2.2.0",
+    "gulp-rev": "^5.1.0",
+    "gulp-rev-replace": "^0.4.2",
     "gulp-stylus": "~2.0.5",
     "gulp-util": "~3.0.6",
     "gulp-watch": "~4.2.4",
@@ -26,8 +29,10 @@
     "nib": "~1.1.0",
     "node-libs-browser": "^0.5.2",
     "publisssh": "~1.0.0",
+    "run-sequence": "^1.1.2",
     "stylus": "~0.51.1",
-    "webpack": "~1.10.1"
+    "webpack": "~1.10.1",
+    "webpack-stream": "^2.0.0"
   },
   "dependencies": {
     "classnames": "~2.1.3",
