--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "gulp-inject": "^1.5.0",
     "gulp-notify": "~2.2.0",
     "gulp-rev": "^5.1.0",
-    "gulp-rev-replace": "^0.4.2",
-    "gulp-sequence": "^0.4.0",
     "gulp-stylus": "~2.0.5",
     "gulp-util": "~3.0.6",
     "gulp-watch": "~4.2.4",
@@ -33,8 +31,7 @@
     "run-sequence": "^1.1.2",
     "stylus": "~0.51.1",
     "through2": "^2.0.0",
-    "webpack": "~1.10.1",
-    "webpack-stream": "^2.0.0"
+    "webpack": "~1.10.1"
   },
   "dependencies": {
     "classnames": "~2.1.3",
