--- a/package.json
+++ b/package.json
@@ -48,5 +48,6 @@
     "reflux": "~0.2.8",
     "tether": "HubSpot/tether#df8cd44",
     "underscore": "^1.8.3"
-  }
+  },
+  "engine": "node 0.12.x"
 }
